--- a/app/templates/listing_small_prev.html
+++ b/app/templates/listing_small_prev.html
@@ -78,13 +78,13 @@
           
             </div>
 
-            <div class="span3 listing">
+            <!-- <div class="span3 listing">
               <div class="banners_outer">
                 <div class="flexslider banners">
                   <ul>
                       <li>
                       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <!-- bf_listing_vertical_left -->                    
+                        {# bf_listing_vertical_left #}                 
                         
                         <ins class="adsbygoogle"
                              style="display:inline-block;width:200px;height:1050px"
@@ -95,14 +95,10 @@
                       </script>
                     </li>
                   </ul>
-                  <!-- <ul class="slides">
-                    <li> <a href="product.html"><img src="/static/img/banner1.jpg" alt="" ></a> </li>
-                    <li> <a href="product.html"><img src="/static/img/banner2.jpg" alt="" ></a> </li>
-                    <li> <a href="product.html"><img src="/static/img/banner3.jpg" alt="" ></a> </li>
-                  </ul> -->
+                  
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <!-- {# Big search Block #} -->
@@ -447,7 +443,7 @@
                         <!-- bf_listing_vertical_left -->                    
                         
                         <ins class="adsbygoogle"
-                             style="display:inline-block;width:200px;height:1050px"
+                             style="display:inline-block;width:200px;height:750px"
                              data-ad-client="ca-pub-5277836163297591"
                              data-ad-slot="8347310669"></ins>
                         <script>
