--- a/app/templates/listing_small_prev.html
+++ b/app/templates/listing_small_prev.html
@@ -72,10 +72,6 @@
               <hr>
               {%endfor%}
               <!-- {# PriceFilter #} -->
-              
-     
-                    
-          
             </div>
 
             <!-- <div class="span3 listing">
@@ -435,15 +431,15 @@
     <!-- Google Ad Right
      -->
      <div class="span2 listing">
-              <div class="banners_outer">
-                <div class="flexslider banners">
+              <div class="banners_outer listing">
+                <div class="flexslider banners listing">
                   <ul>
                       <li>
                       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- bf_listing_vertical_left -->                    
                         
                         <ins class="adsbygoogle"
-                             style="display:inline-block;width:200px;height:750px"
+                             style="display:inline-block;width:150px;height:750px"
                              data-ad-client="ca-pub-5277836163297591"
                              data-ad-slot="8347310669"></ins>
                         <script>
