--- a/app/templates/compare.html
+++ b/app/templates/compare.html
@@ -112,7 +112,7 @@
           </div>
         </div>          
           <!-- Bottom CpareList PopUp-->
-        <div class="row">
+        <div class="row" style="position:absolute;">
           <div class="span12" style="margin-left:0px">
               <div class="product-listing product-grid" style="margin-left:13.5%; margin-right:2%">
                 <div class="row big_with_description   ">
