fixing main search

--- a/app/templates/landingpage.html
+++ b/app/templates/landingpage.html
@@ -8,9 +8,9 @@
         <div class="container">
           <div class="row">
             <div class="span9 offset2">
-              <form class="form-wrapper-search cf">
+              <form class="form-wrapper-search cf" action="javascript:search();">
                   <input id="allProductSearch" type="text" placeholder="Search entire store and ..." required>
-                  <button type="submit">Search</button>
+                  <button type="submit" onclick="search();">Search</button>
               </form>
               {#Inser A Search#}
             </div>
