PDP page keywords missing and unequal box size-fix

--- a/app/static/css/Bazaarfunda.css
+++ b/app/static/css/Bazaarfunda.css
@@ -581,3 +581,7 @@ position:relative;
     background-color: #FAFAFA;
     border-radius: 0;
 }
+
+.product .product-tocart, .preview .product-tocart {
+	height:55px;
+}
