Search page ad indentation

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,7 +4,7 @@
   <meta id="category" data-name="{{category}}" />
   <section id="content">
     <div class="container top listing">
-      <div class="row">
+      <div class="row" style="position:absolute">
         <div class="span3 listing" id="column_left">
           <div class="row">
             
