--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -102,10 +102,9 @@
       <div class="span2 listing">
       <div class="color-box aligncenter">
             <div class="animate scale animated"><a href="#" class="icon-vcard icon-5x btn rounded"></a></div>
-            <h6 >BazaarFunda Recommendation</h6>
+            <h6 >BazaarFunda Recommendation}</h6>
             <!-- <p>Mauris et ligula quis erat dignissim impe rdiet. Integer ligula magna, dictum et, pul vinar non, ultricies ac, nibh. </p> -->
-
-             <button class="btn-middle" onclick="location.href='#';"><i class="icon-basket-1"></i> RECOMMEND ME</button>
+             <button class="btn-middle" data-toggle="modal" href= "#{{ category + '_Modal' if category is not none else 'RecoModal'}}"><i class="icon-basket-1"></i> RECOMMEND ME</button>
           </div>      
       </div>        
       </div>
