--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -321,11 +321,10 @@ $( document ).ready(function() {
               </li>
             </ul>
           </nav>
-          <nav> 
-            
+          <nav>             
             <ul class="menu" id="nav">
               <li class="menu_home_link"><a href="index.html"><i class="icon-home"></i></a></li>
-              <li class="dropdown"> <a href="index.html">Category</a>
+              <li class="dropdown"> <a href="#">Category</a>
                 <ul class="level0 one-column">
                   <li>
                     <ul class="shadow">
