compare page ad indent fix

--- a/app/templates/compare.html
+++ b/app/templates/compare.html
@@ -383,7 +383,7 @@
     <!--tabends-->
     </div>
     <!--Left Row-->
-    <div class="span2">
+    <div class="span2 listing">
       <div class="banners_outer">
         <div class="flexslider banners">
           <ul>
