listing page banner

--- a/app/templates/listing_small_prev.html
+++ b/app/templates/listing_small_prev.html
@@ -434,7 +434,7 @@
 
       <!-- Google Ad Right
      -->
-     <div class="banners_outer listing">
+     <!-- <div class="banners_outer listing"> -->
                 <div class="flexslider banners listing">
                   <ul>
                       <li>
@@ -457,7 +457,7 @@
                     <li> <a href="product.html"><img src="/static/img/banner3.jpg" alt="" ></a> </li>
                   </ul> -->
                 </div>
-              </div>
+              <!-- </div> -->
      
             <!-- Google Ad Right
      -->
