--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -15,13 +15,15 @@
                   {%endfor%}
               </ul>
               <div class="banners_outer">
-                <div class="flexslider banners">
-                  <ul class="slides">
-                    <li> <a href="product.html"><img src="/static/img/banner1.jpg" alt="" ></a> </li>
-                    <li> <a href="product.html"><img src="/static/img/banner2.jpg" alt="" ></a> </li>
-                    <li> <a href="product.html"><img src="/static/img/banner3.jpg" alt="" ></a> </li>
-                  </ul>
-                </div>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <!-- bf_search_left_vertical -->
+                  <ins class="adsbygoogle"
+                       style="display:inline-block;width:160px;height:600px"
+                       data-ad-client="ca-pub-5277836163297591"
+                       data-ad-slot="7246217067"></ins>
+                  <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+                  </script>
               </div>
             </div>
           </div>
