--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5289,9 +5289,9 @@ ul.sitemap.styled-list.circle ul ul li:before {
 	margin-top:-17px;
 }
 #spy.fix {
-	background-color:#222a36;
+	background-color:#E6E6E6;
 	/*border-style: solid;*/
-    border-top: #000000;
+    border-top: #8A0808;
     border-top-style: solid;
 	animation-name:slideDown;
 	-webkit-animation-name:slideDown;
