--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -263,7 +263,7 @@ $( document ).ready(function() {
     </div>
     {# Header Container #}
     <div class="container" style="display:none">
-      <div class="wrapper_w">
+      <!-- <div class="wrapper_w">
         <div id="logo"> <a href="index.html" class="logo_inner"><img src="/static/img/logo-1.png" alt=""></a> </div>
         <div class="pull-right padding-1" id="cart">
           <div class="shoppingcart">
@@ -298,7 +298,7 @@ $( document ).ready(function() {
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="span12">
           <nav>
