--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -132,9 +132,10 @@ $( document ).ready(function() {
                   <div id="{{catType}}reco_slide_2" class="pos_relative align_center">
                     
                       <br><br><br><br>
-                      <h1>Find the right Product for you</h1>
+                      <h1>LET US FIND THE BEST PRODUCT FOR YOU</h1>
                       <font face="">
-                      <h5>With many Product to choose from it must be very hectic to make a decision,<br> Answer few questions and we will recommend a Product for you</h5>
+                      <h5>With many products to choose from it must be very difficult and confusing for you, 
+so just answer few questions and we will suggest the best product according to your requirements</h5>
                       </font>
                       
                       <a id = "{{catType}}slide_2_next" class="btn" onclick="start_recommendationSlider('{{catType}}', this, '{{catType}}');">Get Started</a>
@@ -171,9 +172,10 @@ $( document ).ready(function() {
                   <div id="reco_slide_1" class="pos_relative align_center">
                     
                       <br><br><br><br>
-                      <h1>Find the right Product for you</h1>
+                      <h1>LET US FIND THE BEST PRODUCT FOR YOU</h1>
                       <font face="">
-                      <h5>With many Product to choose from it must be very hectic to make a decision,<br> Answer few questions and we will recommend a Product for you</h5>
+                      <h5>With many products to choose from it must be very difficult and confusing for you, 
+so just answer few questions and we will suggest the best product according to your requirements</h5>
                       </font>
                       
                       <a id = "slide_1_next" class="btn" onclick="reco_slider_next(this)">Get Started</a>
@@ -313,7 +315,7 @@ $( document ).ready(function() {
                       {%endfor%}
                       </ul>
                   </li>
-                  <li> <a href="/compare"> Comparisions </a> <a class="icon-collapse collapsed" href="#level2" title="" data-toggle="collapse" ><i class="icon-up pull-right"></i><i class="icon-down pull-right"></i></a>
+                  <li> <a href="/compare"> Comparisons </a> <a class="icon-collapse collapsed" href="#level2" title="" data-toggle="collapse" ><i class="icon-up pull-right"></i><i class="icon-down pull-right"></i></a>
                     
                   </li>
                  
