some text change here and there

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -341,7 +341,7 @@ so just answer few questions and we will suggest the best product according to y
                   </li>
                 </ul>
               </li>
-              <li class="dropdown"> <a href="/compare">Comparisions</a>
+              <li class="dropdown"> <a href="/compare">Comparisons</a>
                
               </li>
               
