--- a/app/templates/landingpage.html
+++ b/app/templates/landingpage.html
@@ -207,17 +207,14 @@
                 <div class="flexslider">
                   <ul class="slides">
                     <li>
-                      <p>We at IIM, Bangalore did a dry testing on Bazaarfunda recommendations. The results were fabulous. The features rating based on user experience is near to perfection.</p>
-                      <p><span>Ashish Shetty, IIMB</span></p>
+                      <p>We at IIM, Bangalore did a dry testing oF Bazaarfunda recommendations. The results were fabulous. The rating of product features based on analysis of reviews is near to perfection.</p>
+                      <p><span>Ashish Sethi,PGDM,IIM Bangalore. </span></p>
                     </li>
                     <li>
-                      <p>Etiam vel odio a urna sagittis pharetra in nec orci. Phasellus volutpat eu lorem non rhoncus. Aenean elementum turpis ac justo posuere ultricies. Donec in orci erat. Duis bibendum euismod tortor quis placerat.</p>
-                      <p><span>John Smith, Director of Marketing </span></p>
+                      <p>The product comparison feature based on reviews is unique as it's very difficult to comprehend the specifications and I could discover the best feature though being a layman in tech jargons. Kudos to Bazaarfunda.</p>
+                      <p><span>Ambar De, Edutor.com</span></p>
                     </li>
-                    <li>
-                      <p>Morbi pharetra ac tellus sed blandit. Sed consequat felis nec nulla euismod imperdiet. Sed id feugiat diam. Aenean purus dui, imperdiet vitae sollicitudin at, vehicula ut quam. Quisque sodales diam nec pellentesque faucibus. Donec volutpat rutrum metus, vel ullamcorper urna rhoncus laoreet.</p>
-                      <p><span>Jodie Smith, Designer and Developer</span></p>
-                    </li>
+                    
                   </ul>
                 </div>
               </div>
@@ -234,7 +231,7 @@
     <div class="container">
       <div class="row">
         <div class="span12 home">
-          <h3 class="padding">Media&Publication</h3>
+          <h3 class="padding">Media & Publication</h3>
           <div class="brands_block" id="brands0">
             <ul class="jcarousel-skin-brands">
               {%for media in allMediaPublication%}
