--- a/app/templates/listing_small_prev.html
+++ b/app/templates/listing_small_prev.html
@@ -174,7 +174,7 @@
           <div class="brands_block" id="brands0">
             <ul class="jcarousel-skin-brands">
               {%for banners in listingStatic.hotbrands%}
-              <li><a href="{{banners.location}}"><img src={{banners.link}} alt="3docean" title="3docean" /></a></li>  
+              <li><a href="{{banners.location}}"><img src={{banners.link}}  /></a></li>  
               {%endfor%}            
               
             </ul>
