--- a/app/templates/product_detail.html
+++ b/app/templates/product_detail.html
@@ -320,7 +320,7 @@
                           </span>
                           <span class="closed">
                           <i class="icon-plus"></i>
-                          </span>PROS
+                          </span>What rocks!
                           </a>
                       </div>
                       <div id="collapseOnePros{{reviews["About"].split()[0]}}" class="accordion-body in collapse" style="height: auto">
@@ -350,7 +350,7 @@
                           </span>
                           <span class="closed">
                           <i class="icon-plus"></i>
-                          </span>CONS
+                          </span>What sucks!
                           </a>
                       </div>
                       <div id="collapseOneCons{{reviews["About"].split()[0]}}" class="accordion-body in collapse" style="height: auto">
