--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -65,6 +65,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css' />
 <link href='http://fonts.googleapis.com/css?family=Alegreya:700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Changa+One:400,400italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/modernizr-2.6.2.min.js"></script>
 
 <!-- {#[if IE 9 ]><link href="/static/css/styleie9.css" rel="stylesheet"> <![endif]#}
@@ -91,6 +92,7 @@
 <script src="{{ url_for('static', filename='js/jquery.circliful.js')}}"></script>
 <script src="{{ url_for('static', filename='js/jquery.circliful.min.js')}}"></script>
 <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/Reco.js"></script> 
+<!-- <script src="/static/js/Reco.js"></script> -->
 
 <script>
 $( document ).ready(function() {
