--- a/app/templates/listing_small_prev.html
+++ b/app/templates/listing_small_prev.html
@@ -436,7 +436,7 @@
       <!-- Google Ad Right
      -->
      <!-- <div class="banners_outer listing"> -->
-                <div class="flexslider banners listing">
+                <div class="">
                   <ul>
                       <li>
                       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
