--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -366,5 +366,19 @@ so just answer few questions and we will suggest the best product according to y
 <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/toucheffects.js"></script>
 <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.easing.js"></script>
 <!-- <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/overrides.js"></script> -->
+<!-- Google Analytics -->
+<div style="align:center">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64550599-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</div>
+<!-- Google Analytics -->
 </body>
 </html>
