couple compare in listing page fix

--- a/app/templates/listing_small_prev.html
+++ b/app/templates/listing_small_prev.html
@@ -426,7 +426,7 @@
               </div>
             </div>
             <div class="comp-prod-foot">
-            <a href="/compare?ids={{comItem.loncatio}},{{comItem.link}}" class="btn">compare</a>
+            <a onclick="coupleCompare('{{comItem.location}}','{{comItem.link}}');" href="#" class="btn">compare</a>
             </div>
           </div> 
           </div>
